5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1668_2970.log
== TEST (2019-04-15 18:54:36) 
-- CODE:
tempo = int(input())
qf = 1.042.000
q0 = 1.500
i = round((qf/q0**(1/t)) - 1 ,5)
if i <= 0.01:
	mensagem = "Real"
else: 
	mensagem = "Ireeal"
print(i)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    qf = 1.042.000
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:54:44) 
-- CODE:
tempo = int(input())
qf = 1.042.000
q0 = 1.500
i = round((qf/q0**(1/t)) - 1 ,5)
if i <= 0.01:
	mensagem = "Real"
else: 
	mensagem = "Ireeal"
print(i)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    qf = 1.042.000
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
